# godaddy-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dns.rs  godaddy.rs  ip_addr.rs  main.rs  models.rs
