[package]
name = "godaddy-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
random_word = { version = "0.4.0", features = ["en"] }
log = "0.4"
env_logger = "0.8"
clap = "3.0"
trust-dns-resolver = "0.20.3"

[profile.release]
panic = 'abort'